# Web1.1.Home_work_9

./: README.md  authors.json  consumer.py  data_loader.py  main.py  models.py  producer.py  pyproject.toml  quote_search.py  websitescrapingcode.py
data.json/: authors.json  quotes.json
