[tool.poetry]
name = "WEB1.1.HOME_WORK_8"
version =  "0.1.0"
description = ""
authors = ["NickoTesla <mykolandwirt@gmail.com>"]
readme = "README.md"
packages = [{include = "[tool"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.4.1"
mongoengine = "^0.27.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
